--- a/home.html
+++ b/home.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>N-Queens Problem</title>
-  <style>
-    /* Your CSS styles here */
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    h1 {
-      color: #333;
-    }
-    p {
-      margin-bottom: 20px;
-    }
-    a {
-      display: inline-block;
-      background-color: #f72585;
-      color: #fff;
-      text-decoration: none;
-      padding: 10px 20px;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-    }
-    a:hover {
-      background-color: #f44336;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Welcome to the N-Queens Problem</h1>
-    <h2>The N-Queens Problem</h2>
-    <p></p>
-    <p>
-      The N-Queens problem is a classic problem in computer science and mathematics. It involves placing N chess queens on an N×N chessboard so that no two queens threaten each other; thus, a solution requires that no two queens share the same row, column, or diagonal.
-    </p>
-    <p>
-      This visualization tool allows you to interactively solve the N-Queens problem. You can specify the number of queens and see how they can be placed on the board without threatening each other.
-    </p>
-    <a href="index.html">Try the N-Queens Visualiser</a>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>N-Queen-Visualiser</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZIXwwH3fSZyD0Csweedp_MF13Q57iA3VEmXxv_dYPIw&s" type="image/x-icon">
+  </head>
+
+  <body>
+    <header class="header">
+      <h2>
+        N-Queens Visualiser <i class="fas fa-crown" style="color: #fdfffc"></i>
+      </h2>
+    </header>
+    <div class="n-queen">
+      <div class="inputbox">
+        <input type="number" class="numberbox" id="numberbox" required />
+        <label>Enter total Queens</label>
+      </div>
+
+      <div class="slider-container">
+        <input
+          class="slider"
+          id="slider"
+          type="range"
+          min="0"
+          max="100"
+          value="60"
+        />
+        <div id="progress-bar"></div>
+      </div>
+      <button class="play-button" id="play-button">
+        <i class="fa fa-play" aria-hidden="true"></i> Play
+      </button>
+    </div>
+
+    <div class="queen-arrangement" id="queen-arrangement"></div>
+    <div id="n-queen-board"></div>
+    <script src="script.js"></script>
+  </body>
 </html>
