Made a new folder

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p>
       This visualization tool allows you to interactively solve the N-Queens problem. You can specify the number of queens and see how they can be placed on the board without threatening each other.
     </p>
-    <a href="home.html">Try the N-Queens Visualiser</a>
+    <a href="./home/home.html">Try the N-Queens Visualiser</a>
   </div>
 </body>
 </html>
