--- a/home/home.html
+++ b/home/home.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZIXwwH3fSZyD0Csweedp_MF13Q57iA3VEmXxv_dYPIw&s" type="image/x-icon">
   </head>
 
@@ -42,6 +42,6 @@
 
     <div class="queen-arrangement" id="queen-arrangement"></div>
     <div id="n-queen-board"></div>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
